k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-login-app
  labels:
    app: employee-login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-login-app
  template:
    metadata:
      labels:
        app: employee-login-app
    spec:
      containers:
      - name: employee-login-app
        image: saikishorea/employee-login-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employee-login-service
spec:
  selector:
    app: employee-login-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
