k8s/employee-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-login-service
spec:
  selector:
    app: employee-login-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
